--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Design your taco!</h1>
         <img th:src="@{/images/TacoCloud.png}"/>
-        <form method="post" th:object="${design}">
+        <form method="POST" th:object="${design}">
             <div class="grid">
                 <div class="ingredient-group" id="wraps">
                     <h3>Design your wrap: </h3>
@@ -45,10 +45,16 @@
                     </div>
                 </div>
             </div>
+
             <div>
                 <h3>Name your taco creation:</h3>
                 <input type="text" th:field="*{name}"/>
+                <span th:text="${#fields.hasErrors('name')}">XXX</span>
+                <span class="validationError"
+                      th:if="${#fields.hasErrors('name')}"
+                      th:errors="*{name}">Name Error</span>
                 <br/>
+
                 <button>Submit your taco</button>
             </div>
         </form>
